--- a/connect4.resx
+++ b/connect4.resx
@@ -120,4 +120,81 @@
   <metadata name="menuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAICAAAAEAIACoEAAAFgAAACgAAAAgAAAAQAAAAAEAIAAAAAAAABAAAMMOAADDDgAAAAAAAAAA
+        AAACAgIAAgICAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAACAgIAAgICAAq1yS0IwtlWCMHYVgfC2VYIwdhWB8LZVgjB2FYHwtlWCMHYVgfC2VYIwdhWB8LZVgjB
+        2FYHwtlWCMHYVgfC2VYIwdhWB8LZVgjB2FYHwtlWCMLYVgfC2VYIwthWB8LZVgjC2FYHwtlWCMLYVgfC
+        2VYIwthWB8LYVgjC2FYJuc42Cr7UcAfH3vsHyOD9B8ff/QfI4P0Hx9/9B8jg/QfH3/0HyOD9B8ff/QfI
+        4P0Hx9/9B8jg/QfH3/0HyOD9B8ff/QfI4P0Hx9/9B8jf/QfH3/0HyN/9B8ff/QfI3/0Hx9/9B8jf/QfH
+        3/0HyN/9B8ff/QfI3/0Hx9/9B8ff/grA1owMucs+C8nf6wvL4f8LzOL/C8vh/wvM4v8Ly+H/C8zi/wvL
+        4f8LzOL/C8vh/wvL4v8Ly+H/C8vi/wvL4f8Ly+L/C8vh/wvL4v8Ly+H/C8vi/wvL4f8Ly+L/C8vh/wvL
+        4v8Ly+H/C8vi/wvL4f8Ly+L/C8vh/wvL4v8Lyt/0Db7SVR2Ynwgcz9uUG9nm/RvZ5v8b2ef/G9nm/xvZ
+        5/8b2eb/G9nn/xvZ5v8b2ef/G9nm/xvZ5/8b2eb/G9nn/xvZ5v8b2ef/G9nm/xvZ5/8b2eb/G9nn/xvZ
+        5v8b2ef/G9nm/xvZ5/8b2eb/G9nn/xvZ5v8b2ef/G9jm/xzS3qgcrLUQAAAAARq8xxGFoXiznJto/5uc
+        af+cnGj/nZ1m/52dZv+bnGj/m5xo/5ucaf+cnGj/nZxm/56dZv+bnGj/m5xo/5ucaf+bm2j/m5pm/5ua
+        Zf+bm2j/m5xo/5ucaf+bnGj/m5tn/5uaZf+bm2f/m5to/5ucaP+NnnHNOK+qHsf//wAAAAEB////AN9y
+        HJbmdR3/53Yc/+BzIv+8ZUb/vGVF/+F0Iv/mdhz/53Yd/+J0IP+/ZkP/umRI/99zJP/ndhz/5nYd/+Z3
+        H//mi0T/5ZFQ/+Z8KP/mdRz/5nYd/+Z1HP/mhDf/5ZRU/+aCM//mdRz/53Yd/+ByHLmaTREIAAAAAQAA
+        AgL//8kA2nMfluN4IP/hdyH/jFV0/zk0xP86NMT/j1Zx/+J3If/jdx//mFpp/zw1wv84M8b/g1F8/+B2
+        I//jdh7/4Z5m/9/Z0v/f3tz/4LeU/+N7Jv/jdh7/4opC/9/Ovv/f4N7/4Mq3/+KGO//jdx7/3HQfuo1K
+        FAkAAAABAAABAQAAAADacx+V43cf/9dzK/9SPqz/LzDP/y8wz/9UP6v/2HMq/911Jf9eQqH/LzDQ/zAw
+        zv9LO7T/0XAx/+R5If/gwKT/3+Pl/9/i4v/f18//4oc8/+N1G//hpHL/3+Pk/9/h4f/f4eL/4Z1m/+N2
+        Hf/cdB+6kEwUCQAAAAEAAAIC//+vANlzH5XjeCD/3nYk/3RLjP8vMM7/LzDO/3ZMiv/gdiP/4nch/4BQ
+        gP8wMM3/LjDP/2pHlf/cdSf/43cf/+Grf//f4eH/3+Pl/+DGsP/jfy3/43Ud/+KTU//f2tT/3+Pl/9/X
+        z//ijkr/43Ye/9x0H7qMShQJAAAAAQAAAQEAAAAA2nMfleJ3IP/keB//z3Az/5NYbv+UWG3/0XAx/+N4
+        H//keB//1HIu/5haaf+QV3H/zG42/+R4H//jdx//4n4s/+Gibf/hq37/4og//+N3H//jdyD/4nkj/+KX
+        Wf/hroP/4pRU/+N4If/jeCD/3HQfupBMFAkAAAABAAACAv//rwDZcx+V43gg/+J3IP/keB//5Xge/+V5
+        Hv/keB//43gg/+J3IP/keB//5Xge/+Z5Hv/keB//43gg/+J3IP/jdx//43Ye/+N2Hf/jdx7/43gg/+N3
+        IP/jdyD/5Hcc/+Z3G//kdxz/43cg/+N3IP/cdB+6jEoUCQAAAAEAAAEBAAAAANpzH5XidyD/43gg/+F3
+        IPXedR++3nUfwOJ3IPbjdyD/43gg/+J3IPvfdR/J3XQfuOF2IO7jdyD/43gg/+J3IPredR/I3XQfuOF2
+        IO7jdyD/43gg/+N3IP/JbTn/rmJU/8xuNv/jeB//43gg/9x0H7qRTBQJAAAAAQAAAgL//50A2XMfleN4
+        IP/idyD92nMfgJhRFgumWBgL2XIfhOJ3IP7idyD/3HQfpLVfGhV+QhIG1XAeYeJ3IPXidyD/3HQfoLNe
+        GROCRBMG1XAeZOJ3IPbkeB7/w2s//1A9rv80Msr/VkCo/8ltOf/keB//3HQfuoxKFAkAAAABAAABAQAA
+        AADacx+V4ncg/+F3IO7Qbh0y/4klAP+8MwDSbx414XYg8OJ3IP7XcR5X/oYkAP//xADHaR0Y33Ug2OJ3
+        IP7XcR5T/4klAP//cgDIaRwb33Uf2+Z5Hf+XWWn/MDDP/zIxzP8xMc3/o15e/+Z5Hf/cdB+6kUwUCQAA
+        AAEAAAIC//+DANpzH5XjeCD/4Xcg+tZxHmH//1QA//90ANVxHmXidyD64ncg/9pzH4h3PhEE/5MnANBt
+        HULhdiDt4ncg/9pzH4RoNg4E/5kpANBuHUXhdiDu5Xge/7ZmTP8/Nr//LjDQ/0Q4uv+9aEX/5Xge/9x0
+        H7qMShQJAAAAAAAAAQEAAAAA2nMfleJ3IP/jeCD/4HYg5dpzH5DZcx+S4XYg5uJ3IP/jeCD/4XYg8dtz
+        H5/Ych+H4HYg1+J3IP/jeCD/4XYg8NtzH53Ych+I33Yg2OJ3IP/jeCD/4HYi/7FkUP+LVHX/tmVM/+J3
+        If/jeCD/3HQfupJNFQgAAAABAAACAv//pgDZcx+V43gg/+J3IP/jeCD/4ncg/+N4IP/jdyD/43gg/+J3
+        IP/jeCD/4ncg/+N4IP/jdyD/43gg/+J3IP/jeCD/4ncg/+N3IP/jdyD/43gg/+J3IP/jeCD/5Xcc/+Z3
+        Gv/ldxz/43gg/+N3IP/cdB+6jEoUCQAAAAEAAAEBAAAAANpzH5XidyD/43gg/+F3IPTddR+73XQfvOJ3
+        IPXidyD/43gg/+J3IPredR/G3HQftOF2IOzjdyD/43gg/+J3IPredR/F3HQfteF2IO3jdyD/43gg/+J3
+        IP/iiD7/4pld/+OGOv/jdx//43gg/9x0H7qRTBUIAAAAAQAAAgL//7cA2nMfluN4IP/idyD92XIffY5L
+        FAqfVBcK2HIfgeJ3IP7idyD/3HQforFdGRNoNw8F1HAeXuJ3IPTidyD/3HQfnq5cGRFuOhAF1XAeYeJ3
+        IPbjdh7/4otE/9/Qwv/f4eD/38y7/+KHPf/jdh7/3HQfuoxKFAkAAAABAAABAQAAAADbcx+W4ncg/+F3
+        IO7Rbh4y/4YkAP+4MQDSbh404HYg8OJ3IP7XcR5X/4YkAP//zgDIaR0Y33Ug2OJ3IP7XcR5T/4klAP//
+        igDHaRwb33Uf2uN2Hf/hpHL/3+Pk/9/h4f/f4uL/4Z5m/+N2Hf/cdB+6kUwVCAAAAAEAAAIC///7ANpz
+        H5bjeCD/4Xcg+tdxHmP///8AAAAAANZxHmjidyD74ncg/9pzH4uDRRIF/5opANBtHUThdyDu4ncg/9pz
+        H4d4PxAE/6ArANFuHkfhdiDv43Ye/+KSUP/f2NH/3+Pl/9/VzP/ijUj/43Ye/9x0H7qLSRQJAAAAAQAA
+        AQEAAAAA23Qfl+J3IP/jeCD/4HYg5ttzH5Tacx+W4XYg6ON3IP/jeCD/4XYg8tx0H6Pacx+M4HYg2eJ3
+        IP/jeCD/4XYg8dx0H6Hacx+M4HYf2+N3IP/jdyD/4ngi/+KUVP/hqn3/4pFP/+J4If/jeCD/3HQfupFM
+        FQgAAAABAAACAv///wDbcx+X43gg/+J3IP/jeCD/4ncg/+N4IP/jdyD/43gg/+J3IP/jeCD/43cg/+N4
+        IP/idyD/43gg/+J3IP/jeCD/43cg/+N4IP/jdyD/43gg/+J3IP/jeCD/43Ye/+N2Hf/jdh7/43cg/+N3
+        IP/cdB+6i0kUCQAAAAAAAAEBAAAAANx0H5fidyD/43gg/+J3IPnfdR/S3nUg1eJ3IPvidyD/43gg/+J3
+        IP3gdiDa3nUfzuJ3IPbjdyD/43gg/+J3IP3fdh/Z3nUfz+J3IPbjdyD/43gg/+J3IP/hdiDn3nUfyuF2
+        IOzidyD/43gg/9x0H7qSTRUIAAAAAQAAAQL///8A23Mfl+N4IP/idyD+23MfjbZgGhbAZRwY23MfmON3
+        IP/idyD/3XQfr8JmGyG1XxoR13EeduJ3IPnidyD/3XQfq8FmGyC2YBoR2HIeeuJ3IPrjdyD/4HYg2M5s
+        HTurWhgN0W4dSuB2IOXjdyD/3HQfuotKFAkAAAAAAAABAQAAAAHcdB+Y4ncg/+J3IO3UcB4w5XkgAP+J
+        JQDRbh464HYg8uJ3IP3VcB5V7n0iAP/JNgDNbB0c4HYg3OJ3IP3XcR5R8n8iAP/ENQDKax0f33Ug3+N4
+        IP/acx+S/+1AAAAAAAGPSxQD3XQfq+N4IP/cdB+6lE4VCAAAAAEAAAEC////ANx0H5jjeCD/4Xcg9tZw
+        HlD1gSMA/5YoANRwHlzidyD64ncg/9lyHnf//5oA6XshAM9tHTnhdyDr4ncg/9lyH3P/8kMA6nshAM9t
+        HTzhdiDs43cg/910H7CsWxgMy2sdAMFmGxTedR/E43cg/9x0H7qLShQJAAAAAAAAAQEAAAAB3XQfmOJ3
+        IP/jeCD/33Yg19lyHnTYch954HYg3eJ3IP/jeCD/4HYg59pzH4PXcR5t33UfyeJ3IP/jeCD/4HYg5tpz
+        H4HYch9u33Ufy+J3IP/jeCD/4Xcg99x0H5/Xch9m3XQfq+J3IPvjeCD/3HQfupJNFQgAAAABAAABAgAA
+        AADcdB+Z43cg/+J3IP/jdyD/4ncg/+N3IP/idyD/43cg/+J3IP/jeCD/4ncg/+J3IP/idyD/43cg/+J3
+        IP/jeCD/4ncg/+J3IP/idyD/43cg/+J3IP/jdyD/4ncg/+J3IP/idyD/43gg/+J3IP/cdB+6ikkUCQAA
+        AAAAAAIBAAAAAdZxHkHbcx9u3XQfbNt0H2zddB9s23MfbN10H2zbcx9s3XQfbNtzH2zddB9s23MfbN10
+        H2zbcx9s3XQfbNtzH2zddB9s23MfbN10H2zbdB9s3XQfbNt0H2zddB9s23QfbN10H2zbdB9s3XQfbdRw
+        Hk96QBEEAAAAAgICAgICAgIBAgICAQICAgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAACAgIAAgICAQICAgICAgIB/////wAAAAAAAAAAAAAAAAAAAAAAAAABQAAAAEAAAABAAAAAQAAAAEAA
+        AABAAAAAQAAAAEAAAABDDDAAQwQQAUAAAABAAAAAQAAAAEAAAABDDDAAQwQQAEAAAABAAAABQAAAAEAA
+        AAEDDDCAQwwwQQAAAABAAAABAAAAAB////g=
+</value>
+  </data>
 </root>
